arreglo de peddo y ventas funconal