@@ -2,13 +2,13 @@ package com.smartlogix.pedidos.config;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -20,6 +20,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Slf4j
 @Configuration
@@ -36,10 +37,9 @@ public class SecurityConfig {
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/pedidos/listar-publico").permitAll()
-                        .anyRequest().authenticated()
-                )
+                        .anyRequest().authenticated())
                 .addFilterBefore(jwtFilter(), UsernamePasswordAuthenticationFilter.class);
-        
+
         return http.build();
     }
 
@@ -47,25 +47,34 @@ public class SecurityConfig {
     public OncePerRequestFilter jwtFilter() {
         return new OncePerRequestFilter() {
             @Override
-            protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+            protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
+                    FilterChain filterChain)
+                    throws ServletException, IOException {
+
                 String authHeader = request.getHeader("Authorization");
-                
+
                 if (authHeader != null && authHeader.startsWith("Bearer ")) {
                     String token = authHeader.substring(7);
+
                     if (jwtUtil.isTokenValid(token)) {
                         String username = jwtUtil.extractUsername(token);
                         Long usuarioId = jwtUtil.extractUsuarioId(token);
+                        String rol = jwtUtil.extractRol(token);
 
                         if (username != null) {
-                            UsernamePasswordAuthenticationToken authentication =
-                                    new UsernamePasswordAuthenticationToken(username, null, Collections.emptyList());
+                            List<SimpleGrantedAuthority> authorities = rol != null
+                                    ? List.of(new SimpleGrantedAuthority(rol))
+                                    : Collections.emptyList();
+
+                            UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                                    username, null, authorities);
                             SecurityContextHolder.getContext().setAuthentication(authentication);
                         }
 
                         request.setAttribute("usuarioId", usuarioId);
                     }
                 }
-                
+
                 filterChain.doFilter(request, response);
             }
         };
